apps/default/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: default
  labels:
    app: sonarr
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 8989
  selector:
    app: sonarr
  type: LoadBalancer
  loadBalancerIP: 192.168.1.162
