apps/default/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: default
spec:
  rules:
  - host: sonarr.bramble.home
    http:
      paths:
      - backend:
          service:
            name: sonarr
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
